try common query