@@ -1,8 +1,8 @@
 package edu.ch.unibas.dis;
 
-import jakarta.annotation.PostConstruct;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.hadoop.util.Time;
 import org.apache.spark.api.java.function.FlatMapFunction;
 import org.apache.spark.sql.*;
 import org.apache.spark.sql.catalyst.encoders.RowEncoder;
@@ -12,7 +12,11 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 import scala.Function1;
+import scala.Tuple3;
+import scala.runtime.AbstractFunction1;
+import scala.Serializable;
 
+import javax.annotation.PostConstruct;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeoutException;
@@ -21,6 +25,14 @@ import java.util.concurrent.TimeoutException;
 @Service
 @Slf4j
 public class SparkStreamingService {
+
+    // Serializable function to extract player from Event
+    private static class PlayerExtractor extends AbstractFunction1<Event, String> implements Serializable {
+        @Override
+        public String apply(Event event) {
+            return event.getPlayer();
+        }
+    }
 
     @Value("${spark.streaming.checkpoint-location}")
     private String CHECKPOINT_LOCATION;
@@ -53,8 +65,7 @@ public class SparkStreamingService {
         spark = SparkSession.builder()
                 .appName("CS Stats Streaming")
                 .master("local[*]")
-//                .config("spark.sql.streaming.checkpointLocation", CHECKPOINT_LOCATION)
-//                .config("spark.driver.extraJavaOptions", "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED")
+                .config("spark.sql.streaming.checkpointLocation", CHECKPOINT_LOCATION)
                 .getOrCreate();
     }
 
@@ -76,68 +87,92 @@ public class SparkStreamingService {
                 .selectExpr("CAST(value AS STRING)")
                 .as(Encoders.STRING());
 
-        Dataset<Event> events = raw.flatMap((FlatMapFunction<String, Event>) line -> {
+        Dataset<KillRelatedEvent> events = raw.flatMap((FlatMapFunction<String, KillRelatedEvent>) line -> {
             String[] cols = line.split(",", -1);
             long tick = Long.parseLong(cols[1]);
             long sec = tick / 128;
-            List<Event> list = new ArrayList<>(3);
+            List<KillRelatedEvent> list = new ArrayList<>(3);
             // killer
             String killer = cols[3];
             if (!killer.isEmpty())
-                list.add(new Event(killer, sec, 1, 0, 0));
+                list.add(new KillRelatedEvent(killer, "kill", sec));
             // victim
-            String victim = cols[8];
+            String victim = cols[7];
             if (!victim.isEmpty())
-                list.add(new Event(victim, sec, 0, 1, 0));
+                list.add(new KillRelatedEvent(victim, "death", sec));
             // assister
             String assist = cols[12];
             if (!assist.isEmpty())
-                list.add(new Event(assist, sec, 0, 0, 1));
+                list.add(new KillRelatedEvent(assist, "assist", sec));
             return list.iterator();
-        }, Encoders.bean(Event.class));
+        }, Encoders.bean(KillRelatedEvent.class));
 
-        // 3) Key by playerName and apply stateful updater
-        Encoder<Row> rowEnc = RowEncoder.apply(new StructType()
-                .add("playerName", "string")
-                .add("second", "long")
-                .add("kills", "long")
-                .add("deaths", "long")
-                .add("assists", "long")
-                .add("kdRatio", "float")
-        );
-
-        PlayerStatsUpdater updater = new PlayerStatsUpdater();
         Dataset<Row> statsStream = events
-                .groupByKey((Function1<Event, String>) Event::getPlayer, Encoders.STRING())
-                .mapGroupsWithState(
-                        updater,
-                        Encoders.bean(PlayerState.class),
-                        rowEnc
+                .groupBy("player")
+                .pivot("type", java.util.Arrays.asList("kill", "death", "assist"))
+                .count()
+                .na().fill(0)
+                .withColumn("kdRatio", functions.when(functions.col("death").equalTo(0), functions.col("kill"))
+                        .otherwise(functions.col("kill").divide(functions.col("death"))))
+                .select(
+                        functions.col("player").as("playerName"),
+//                        functions.col("second"),
+                        functions.col("kill").as("kills"),
+                        functions.col("death").as("deaths"),
+                        functions.col("assist").as("assists"),
+                        functions.col("kdRatio")
                 );
+
 
         // 4) Every 1 second micro-batch, write out via JPA
 
         try {
             // Store the query reference for stopping later
+//            query = statsStream.writeStream()
+//                    .outputMode("complete")
+//                    .trigger(Trigger.ProcessingTime("1 second"))
+//                    .foreachBatch((batchDF, batchId) -> {
+//                        // collect to driver and save one by one
+//                        batchDF.collectAsList().forEach(row -> {
+//                            PlayerStats ps = new PlayerStats();
+//                            ps.setPlayerName(row.getString(0));
+//                            ps.setSecond(row.getLong(1));
+//                            ps.setKills(row.getLong(2));
+//                            ps.setDeaths(row.getLong(3));
+//                            ps.setAssists(row.getLong(4));
+//                            ps.setKdRatio(row.getFloat(5));
+//                            repository.save(ps);
+//                        });
+//                    })
+//                    .start();
             query = statsStream
-                .writeStream()
-                .trigger(Trigger.ProcessingTime("1 second"))
-                .foreachBatch((batchDF, batchId) -> {
-                    // collect to driver and save one by one
-                    batchDF.collectAsList().forEach(row -> {
-                        PlayerStats ps = new PlayerStats();
-                        ps.setPlayerName(row.getString(0));
-                        ps.setSecond(row.getLong(1));
-                        ps.setKills(row.getLong(2));
-                        ps.setDeaths(row.getLong(3));
-                        ps.setAssists(row.getLong(4));
-                        ps.setKdRatio(row.getFloat(5));
-                        repository.save(ps);
-                    });
-                })
-                .start();
+                    .writeStream()
+                    .outputMode("complete")                                  // full aggregation mode
+                    .trigger(Trigger.ProcessingTime("1 second"))             // 1s micro-batches
+                    .foreachBatch((batchDF, batchId) -> {
+                        // 1) write to console for debugging:
+                        batchDF.show(false);
+
+                        // 2) persist each row:
+                        batchDF.collectAsList().forEach(row -> {
+                            PlayerStats ps = new PlayerStats();
+                            ps.setPlayerName( row.getAs("playerName") );
+//                            ps.setSecond(     row.getAs("second") );
+                            ps.setSecond(Time.now() );
+
+                            ps.setKills(      row.getAs("kills") );
+                            ps.setDeaths(     row.getAs("deaths") );
+                            ps.setAssists(    row.getAs("assists") );
+                            ps.setKdRatio(    row.getAs("kdRatio") );
+                            repository.save(ps);
+                        });
+                    })
+                    .option("checkpointLocation", CHECKPOINT_LOCATION)
+                    .start();
 
             query.awaitTermination();
+
+//            query.awaitTermination();
         } catch (TimeoutException | StreamingQueryException e) {
             log.error("Error in streaming query", e);
         }
